solutions/single-ns/iptables-injector/iptables-injector.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: iptables-injector
  labels:
    app: iptables-injector
spec:
  selector:
    matchLabels:
      name: iptables-injector
  template:
    metadata:
      labels:
        name: iptables-injector
    spec:
      hostPID: true
      hostNetwork: true
      containers:
        - name: iptables-injector
          image: iptables-injector
          imagePullPolicy: Never
          command: ["/bin/sh"]
          # args: ["./iptables.sh"]
          args: ["./iptables-file.sh"]
          securityContext:
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
            runAsUser: 0
            runAsGroup: 0
            runAsNonRoot: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add:
              - NET_ADMIN
              - NET_RAW
              drop:
                - ALL
            privileged: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - name: containerd-socket
            mountPath: /var/run
            readOnly: false
      volumes:
      - name: containerd-socket
        hostPath:
          path: /var/run
